Changes

Version_1.5.0 (2025-07-23)

-   Requires python 3.8 or above
-   Extension: ogg/vorbis, ogg/opus, CAF/ALAC and mpeg formats are now
    supported if the installed version of libsndfile supports them
-   Extension: All libsndfile commands (as of version 1.2.2) are now
    supported by PySndfile.command
-   Extension: sndio.write now has a commands parameter to define sound
    file information and settings using the libsndfile sf_command
    function
-   Extension: new function sndio.get_info_command to retrieve
    information about a sound file

Version_1.4.7 (2024-12-31)

-   Fix: Remove deprecated IF conditions in Cython code
-   Remove tests directory from sdist because the test is not a standard
    unittest and led to confusion
-   Extension (build): Optionally use static libraries for libsndfile to
    build a self-contained wheel or avoid runtime
    requirements/conflicts. This is done by defining the environment
    variable PYSNDFILE_USE_STATIC (and optionally
    PYSNDFILE_IGNORE_PKG_CONFIG)
-   Fix (build): Fixed build and installation on Windows
-   Fix (documentation): Generate ChangeLog from README.md and have
    INSTALL.txt refer to it
-   Fix (build): avoid depreciation message when using setup.cfg for
    selecting libsndfile installation to be used.
-   Extension (build): build_ext.finalize_options now communicates the
    sndfile library and include dirs that are used.

Version_1.4.6 (2024-10-11)

-   Fix: Fixed setup.py to find libsndfile in standard locations such
    that pip install can be used more easily. Provide proper warning in
    case libsndfile is not found. Support using non-standard
    installation directories by means of environment variable
    SOUNDFILE_INSTALL_DIR.
-   Removed the requirement for --no-build-isolation in the check target
    of the Makefile

Version_1.4.5 (2024-10-10)

-   Extension: support Path for filename arguments in sndio.
-   Fix: Avoid crash in sndio.write when a zero-sized array is stored