@@ -158,6 +158,11 @@ Please see the developer documentation
 Changes
 -------
 
+Version_1.5.1 (2026-01-27)
+~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+-  Fix (build): Ensure compatibility with Cython 3.2
+
 Version_1.5.0 (2025-07-23)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -469,7 +474,7 @@ Version 0.2.1
 Copyright
 ---------
 
-Copyright (C) 2014-2024 IRCAM
+Copyright (C) 2014-2026 IRCAM
 
 Author
 ------
