@@ -1,5 +1,9 @@
 Changes
 
+Version_1.5.1 (2026-01-27)
+
+-   Fix (build): Ensure compatibility with Cython 3.2
+
 Version_1.5.0 (2025-07-23)
 
 -   Requires python 3.8 or above
